kubernetes/greg-10-08-2022/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greg-deployment
  labels:
    app: greg-training
spec:
  replicas: 3
  selector:
    matchLabels:
      app: greg-training
  template:
    metadata:
      labels:
        app: greg-training
    spec:
      containers:
        - name: training-application
          image: 651828462322.dkr.ecr.eu-west-3.amazonaws.com/node-web-app:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
