kubernetes/greg-10-08-2022/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: greg-pod
  labels:
    app.kubernetes.io/name: trainingClusterApp
spec:
  containers:
  - name: training-application
    image: 651828462322.dkr.ecr.eu-west-3.amazonaws.com/node-web-app:latest
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
