kubernetes/greg-10-08-2022/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greg-service
spec:
  selector:
    app.kubernetes.io/name: trainingClusterApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
