kubernetes/greg-10-08-2022/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greg-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: greg-service
      port:
        number: 80
